2009-01-30  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Replace C99 "variable length arrays" with arrays allocated on the heap so
    that libsamplerate can be compiled with crappy compilers like MSVC.

2009-01-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac NEWS README doc/*.html
    Updates for 0.1.6 release.

2009-01-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/termination_test.c
    Fix termination test error on x86_64. Error probably due to difference in
    rounding.

2009-01-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/win32.html
    Update win32 compile instructions to explain that this release cannot be
    compiled using the microsoft compiler.

    * NEWS README doc/*.html
    Updates for 0.1.5 release.

    * Makefile.am configure.ac
    Remove Win32 directory from distributed tarball.

2008-12-16  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/multi_channel_test.c tests/multichan_throughput_test.c
    Update tests to make sure tests include tests for 10 channels.

    * src/src_sinc.c
    Make 6 channel Sinc conversion another special case.
    Use Duff's Device to speed up the multi-channel case.

    * tests/multi_channel_test.c
    Only test 1, 2 and 3 channels for ZOH and linear converters.

2008-12-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.c
    Move variable definition out one scope level to avoid warnings from static
    analysis tools. Thanks Erik Hovland.

    * tests/util.c
    Make sure FILE* is closed. Thanks Erik Hovland.

    * tests/multi_channel_test.c tests/multichan_throughput_test.c
    Update tests to make sure tests include tests for 6 channels with the Sinc
    converters.

2008-12-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/multichan_throughput_test.c
    Do throughput test on all three SINC based converters.

    * src/src_sinc.c